[package]
name = "mysql_compare"
version = "0.1.0"
edition = "2024"

[dependencies]
mysql = { version = "24.0", default-features = false, features = ["rustls-tls"] }
clap = "2.33"
anyhow = "1.0"
regex = "1"
flate2 = { version = "1.1", features = ["miniz_oxide"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
